Fixed align

--- a/client/main.css
+++ b/client/main.css
@@ -13,6 +13,7 @@ body {
 h1 {
 	padding-left: 5%;
 	color: white;
+	margin-bottom: 0px;
 }
 h2 {
 	background-color: #aaaaaa;
